Fix background overflow

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 }
 
 .background {
-    width: 100vw;
+    width: 100%;
     height: 50%;
     position: absolute;
     background-color: #145DA0;
